--- a/C#/NowDesign/NowDesign/App.xaml
+++ b/C#/NowDesign/NowDesign/App.xaml
@@ -12,7 +12,7 @@
                 <ResourceDictionary Source="Theme/TextboxTheme.xaml"></ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
 
-            <DataTemplate DataType="{x:Type viewModel:MainViewModel}">
+            <DataTemplate DataType="{x:Type viewModel:HomeViewModel}">
                 <view:HomeView/>
             </DataTemplate>
         </ResourceDictionary>
