--- a/C#/NowDesign/NowDesign/MVVM/View/HomeView.xaml
+++ b/C#/NowDesign/NowDesign/MVVM/View/HomeView.xaml
@@ -15,7 +15,8 @@
 
         <StackPanel Orientation="Horizontal">
             <Border Width="400"
-                    Height="200">
+                    Height="200"
+                    Margin="15,0,0,0">
                 <Border.Background>
                     <LinearGradientBrush StartPoint="0,0" EndPoint="1,2">
                         <GradientStop Color="#5bc3ff" Offset="0.0"></GradientStop>
@@ -34,9 +35,61 @@
                                    Foreground="White"
                                    FontSize="28"
                                    Margin="20,10,10,0"/>
+                        <TextBlock Text="Get Started!"
+                                   Foreground="White"
+                                   FontSize="18"
+                                   Margin="20,10,10,0"/>
                     </StackPanel>
                 </Grid>
             </Border>
+            <Border Width="200"
+                    Height="200"
+                    CornerRadius="10"
+                    Margin="45,0,0,0">
+                <Border.Background>
+                    <!-- 그라데이션 추가 -->
+                    <LinearGradientBrush StartPoint="0,0" EndPoint="1,2">
+                        <GradientStop Color="#ffc554" Offset="0.0"></GradientStop>
+                        <GradientStop Color="#ffb73b" Offset="1"></GradientStop>
+                    </LinearGradientBrush>
+                </Border.Background>
+            </Border>
+        </StackPanel>
+
+        <StackPanel>
+            <StackPanel.Resources>
+                <Style TargetType="{x:Type Border}">
+                    <Setter Property="Margin" Value="15,0,0,0"></Setter>
+                </Style>
+            </StackPanel.Resources>
+            <TextBlock Text="Most Watched"
+                       Foreground="White"
+                       FontSize="20"
+                       HorizontalAlignment="Left"
+                       Margin="5,10,0,10"/>
+            <StackPanel Orientation="Horizontal">
+                <Border Width="150"
+                        Height="150"
+                        Background="#844eff"
+                        CornerRadius="10">
+                </Border>
+                <Border Width="150"
+                        Height="150"
+                        Background="#4e9eff"
+                        CornerRadius="10">
+                </Border>
+                <Border Width="150"
+                        Height="150"
+                        Background="#4eff91"
+                        CornerRadius="10">
+                </Border>
+                <Border Width="150"
+                        Height="150"
+                        Background="#ecffee"
+                        CornerRadius="10">
+                </Border>
+
+            </StackPanel>
         </StackPanel>
     </StackPanel>
 </UserControl>
